[WebSocket] Implement WebSocket::close() code and reason handling. https://bugs.webkit.org/show_bug.cgi?id=66925

Patch by Takashi Toyoshima <toyoshim@chromium.org> on 2011-09-01
Reviewed by Kent Tamura.

Source/WebCore:

Tests: http/tests/websocket/tests/hybi/close.html
       http/tests/websocket/tests/hybi/workers/close.html

* bindings/js/JSWebSocketCustom.cpp:
(WebCore::JSWebSocket::close):
* bindings/v8/custom/V8WebSocketCustom.cpp:
(WebCore::V8WebSocket::closeCallback):
Add custom bridge for WebSocket::close().
* websockets/ThreadableWebSocketChannel.h:
* websockets/WebSocket.cpp:
(WebCore::WebSocket::close):
* websockets/WebSocket.h:
* websockets/WebSocket.idl:
* websockets/WebSocketChannel.cpp:
(WebCore::WebSocketChannel::close):
Add code and reason arguments handling.
(WebCore::WebSocketChannel::startClosingHandshake):
Send a close frame without code and reason on server initiated closing handshakes.
(WebCore::WebSocketChannel::processFrame):
(WebCore::WebSocketChannel::processFrameHixie76):
* websockets/WebSocketChannel.h:
* websockets/WorkerThreadableWebSocketChannel.cpp:
(WebCore::WorkerThreadableWebSocketChannel::close):
(WebCore::WorkerThreadableWebSocketChannel::Peer::close):
(WebCore::WorkerThreadableWebSocketChannel::mainThreadClose):
(WebCore::WorkerThreadableWebSocketChannel::Bridge::close):
* websockets/WorkerThreadableWebSocketChannel.h:
Add code and reason arguments handling.

LayoutTests:

* http/tests/websocket/tests/hybi/close-expected.txt: Added.
* http/tests/websocket/tests/hybi/close.html: Added.
* http/tests/websocket/tests/hybi/close_wsh.py: Added.
* http/tests/websocket/tests/hybi/workers/close-expected.txt: Added.
* http/tests/websocket/tests/hybi/workers/close.html: Added.
* http/tests/websocket/tests/hybi/workers/resources/close.js: Added.
(postResult):
(testFailed):
(debug):
(shouldBe):
(shouldBeTrue):
(shouldBeFalse):
(handleOpen):
(handleError):
(handleClose):
(handleMessage):
(setDefaultHandlers):
(runCodeTest.else.ws.onclose):
(runCodeTest):
(runInvalidStringTest):
(runReasonTest.else.ws.onclose):
(runReasonTest):
(runCodeAndReasonTest.):
(runCodeAndReasonTest):

Canonical link: https://commits.webkit.org/83296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94387 268f45cc-cd09-0410-ab3c-d52691b4dbfc