Source/WebCore/websockets/ThreadableWebSocketChannel.h
@@ -54,7 +54,7 @@ public:
     virtual String subprotocol() = 0; // Will be available after didConnect() callback is invoked.
     virtual bool send(const String& message) = 0;
     virtual unsigned long bufferedAmount() const = 0;
-    virtual void close() = 0;
+    virtual void close(int code, const String& reason) = 0;
     // Log the reason text and close the connection. Will call didClose().
     virtual void fail(const String& reason) = 0;
     virtual void disconnect() = 0; // Will suppress didClose().
